--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-vue-3": "^0.1.12",
     "core-js": "^3.8.3",
+    "firebase": "^9.8.1",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
@@ -41,6 +42,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
+    "firebase-tools": "^10.9.2",
     "jest": "^27.0.5",
     "prettier": "^2.4.1",
     "ts-jest": "^27.0.4",
@@ -49,6 +51,9 @@
   "_id": "baemin_proj@1.0.0",
   "bugs": {
     "url": "https://github.com/taeryu0627/baemin_proj/issues"
+  },
+  "directories": {
+    "test": "tests"
   },
   "homepage": "https://github.com/taeryu0627/baemin_proj#readme",
   "license": "ISC",
